[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Menu_Hintergrund_Options.png" type="Texture" id=1]
[ext_resource path="res://skripte/ZurueckButton.gd" type="Script" id=2]
[ext_resource path="res://skripte/MusiktitelInput.gd" type="Script" id=3]
[ext_resource path="res://skripte/MusikpfadInput.gd" type="Script" id=4]
[ext_resource path="res://skripte/Options2.gd" type="Script" id=5]
[ext_resource path="res://skripte/saveButton.gd" type="Script" id=6]
[ext_resource path="res://skripte/EntfernenButton.gd" type="Script" id=7]

[node name="Options2" type="Node"]
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1081.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusiktitelInput" type="LineEdit" parent="."]
margin_left = 382.0
margin_top = 237.0
margin_right = 1732.0
margin_bottom = 297.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusiktitelLabel" type="Label" parent="."]
margin_left = 168.0
margin_top = 243.0
margin_right = 251.0
margin_bottom = 264.0
rect_scale = Vector2( 2.3, 2.3 )
text = "Musiktitel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusikpfadInput" type="LineEdit" parent="."]
margin_left = 386.0
margin_top = 343.0
margin_right = 1736.0
margin_bottom = 403.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusikpfadLabel" type="Label" parent="."]
margin_left = 157.0
margin_top = 350.0
margin_right = 244.0
margin_bottom = 370.0
rect_scale = Vector2( 2.3, 2.3 )
text = "Musikdatei"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZurueckButton" type="Button" parent="."]
margin_left = 1620.0
margin_right = 1920.0
margin_bottom = 100.0
text = "Back"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="saveButton" type="Button" parent="."]
margin_left = 1570.0
margin_top = 661.0
margin_right = 1870.0
margin_bottom = 761.0
text = "Hinzufügen"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EntfernenButton" type="Button" parent="."]
margin_left = 1226.0
margin_top = 661.0
margin_right = 1526.0
margin_bottom = 761.0
text = "Entfernen"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusikLaenge" type="Label" parent="."]
margin_left = 29.0
margin_top = 454.0
margin_right = 182.0
margin_bottom = 475.0
rect_scale = Vector2( 2.2, 2.2 )
text = "Musiklänge (in sec)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusikLaengeInput" type="SpinBox" parent="."]
margin_left = 385.0
margin_top = 442.0
margin_right = 584.0
margin_bottom = 511.0
allow_greater = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fehlermeldung" type="RichTextLabel" parent="."]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
margin_left = 174.0
margin_top = 28.0
margin_right = 887.0
margin_bottom = 105.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}
